--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.18",
     "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.8",
+    "postcss": "^8.2.9",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^2.0.4"
   }
 }
